fixed z-index for matches

--- a/bracket/css/style.css
+++ b/bracket/css/style.css
@@ -178,6 +178,7 @@ div.bracket-match{
 	position: relative;
 	color:#fff;
 	overflow: hidden;
+	z-index:10;
 }
 
 div.bracket-match.live{
